@@ -1,3 +1,3 @@
 
-[:var || temp | Transcript show: 'Hello World.'; cr; cr.] value.
+[:var | Transcript show: 'Hello World.'; cr; cr.] value.
 
